# VidOS

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: Main.yml  image_comparison.yml
Converter/: Cargo.toml
converter/: Cargo.toml
converter/src/: char.rs  chunk.rs  constants.rs  converter.rs  image.rs  image_.rs  main.rs  other.rs  video.rs
os/: Cargo.toml
os/.cargo/: config.toml
os/src/: main.rs
src/converter/: main.rs
src/os/: main.rs
