[package]
name = "vid_os"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "vid_os"
path = "src/os/main.rs"

[[bin]]
name = "vid-converter"
path = "src/converter/main.rs"

[unstable]
build-std-features = ["compiler-builtins-mem"]
build-std = ["core", "compiler_builtins"]

[dependencies]
gstreamer = "0.21.0"
sha2 = "0.10.7"
